import { useLingui } from '@lingui/react/macro';
import { Link } from 'expo-router';
import { use } from 'react';
import { Pressable, Text } from 'react-native';

import { ThemeContext } from '../../../theme/context/theme.context';
import { donationLinkConstant } from '../../constants/donation.constant';

import { SupportUkraineBannerStyles as styles } from './support-ukraine-banner.styles';

export const SupportUkraineBanner = () => {
    const { theme } = use(ThemeContext);
    const { t } = useLingui();

    const wrapperStyles = { backgroundColor: theme.colors.black };
    const textStyles = [styles.text, { color: theme.colors.white }];

    return (
        <Link asChild href={donationLinkConstant} style={wrapperStyles}>
            <Pressable style={styles.container}>
                <Text allowFontScaling={false} style={textStyles}>
                    {t`Support Ukraine`} 🇺🇦
                </Text>
            </Pressable>
        </Link>
    );
};
