export enum HistoryScreenSelectors {
    Root = 'HistoryScreenSelectors.Root'
}
