export enum DailyScreenSelectors {
    Root = 'DailyScreenSelectors.Root',
    ActionButton = 'DailyScreenSelectors.ActionButton'
}
