export enum ChallengeAcceptScreenSelectors {
    AcceptButton = 'ChallengeAcceptScreenSelectors.AcceptButton',
    MaybeLaterButton = 'ChallengeAcceptScreenSelectors.MaybeLaterButton',
    OpponentTime = 'ChallengeAcceptScreenSelectors.OpponentTime',
    Root = 'ChallengeAcceptScreenSelectors.Root',
    Timeline = 'ChallengeAcceptScreenSelectors.Timeline'
}
