...
    [SolutionTechniqueEnum.PointingPair]: msg`Pointing Pair`,
    [SolutionTechniqueEnum.PointingTriple]: msg`Pointing Triple`,
    [SolutionTechniqueEnum.BoxLineReduction]: msg`Box-Line Reduction`,
    [SolutionTechniqueEnum.NakedPair]: msg`Naked Pair`,
    [SolutionTechniqueEnum.NakedTriple]: msg`Naked Triple`,
    [SolutionTechniqueEnum.NakedQuad]: msg`Naked Quad`,
    [SolutionTechniqueEnum.HiddenPair]: msg`Hidden Pair`,
    [SolutionTechniqueEnum.HiddenTriple]: msg`Hidden Triple`,
    [SolutionTechniqueEnum.HiddenQuad]: msg`Hidden Quad`,
    [SolutionTechniqueEnum.XWing]: msg`X-Wing`,
    [SolutionTechniqueEnum.Swordfish]: msg`Swordfish`,
    [SolutionTechniqueEnum.Jellyfish]: msg`Jellyfish`,
    [SolutionTechniqueEnum.FinnedXWing]: msg`Finned X-Wing`,
...
    [SolutionTechniqueEnum.XYWing]: msg`XY-Wing`,
    [SolutionTechniqueEnum.XYZWing]: msg`XYZ-Wing`,
    [SolutionTechniqueEnum.WWing]: msg`W-Wing`,
    [SolutionTechniqueEnum.XChain]: msg`X-Chain`,
    [SolutionTechniqueEnum.XYChain]: msg`XY-Chain`,
    [SolutionTechniqueEnum.SimpleColoring]: msg`Simple Coloring`,
    [SolutionTechniqueEnum.AIC]: msg`AIC`,
    [SolutionTechniqueEnum.UniqueRectangle]: msg`Unique Rectangle`,
    [SolutionTechniqueEnum.BivalueUniversalGrave]: msg`BUG+1`,
    [SolutionTechniqueEnum.NishioForcingChain]: msg`Nishio Forcing Chain`,
    [SolutionTechniqueEnum.CellForcingChain]: msg`Cell Forcing Chain`,
    [SolutionTechniqueEnum.RegionForcingChain]: msg`Region Forcing Chain`
};
...
