export enum ChallengeResultScreenSelectors {
    MarginValue = 'ChallengeResultScreenSelectors.MarginValue',
    OpponentTimeValue = 'ChallengeResultScreenSelectors.OpponentTimeValue',
    OutcomeValue = 'ChallengeResultScreenSelectors.OutcomeValue',
    PlayerRun = 'ChallengeResultScreenSelectors.PlayerRun',
    RivalRun = 'ChallengeResultScreenSelectors.RivalRun',
    Root = 'ChallengeResultScreenSelectors.Root',
    UkraineSupportCta = 'ChallengeResultScreenSelectors.UkraineSupportCta',
    YourTimeValue = 'ChallengeResultScreenSelectors.YourTimeValue'
}
