...
    const lostByTime = result === ChallengeResult.Lost && lossReason === ChallengeLossReason.Time;

    let title = t`Dead even`;
    let flavorText = t`Evenly matched`;
    if (result === ChallengeResult.Won) {
        title = t`Challenge won`;
        flavorText = t`You beat your rival`;
    }
    if (result === ChallengeResult.Lost) {
        title = t`Challenge lost`;
        flavorText = lostByMistakes ? t`Out of mistakes` : t`Your rival was faster`;
    }

...
