url: https://www.suuudokuuu.com
---
- launchApp
- assertVisible: "SuuudokuuU"
- tapOn: "Support Ukraine.*"
- assertVisible:
    text: "Donate to Ukraine Army Fundraiser"
- back
- tapOn: "Privacy policy"
- assertVisible: "Privacy Policy Effective Date.*"
- back
- tapOn: "Start new"
- tapOn: "Back"
- assertVisible: "Start new"
- tapOn: "Start new"
- runScript: subflows/scripts/difficulties.js
- assertVisible: ${ output.difficulties[0] }
- evalScript: ${output.counter = 0}
- repeat:
    times: ${output.difficulties.length}
    commands:
      - assertVisible: ${output.difficulties[output.counter]}
      - evalScript: ${output.counter = output.counter + 1}
- tapOn: "Newbie"
- assertVisible:
    below: "Score"
    id: "GameScreenSelectors.Score"
    text: "0"
- assertVisible:
    below: "Mistakes"
- assertVisible:
    id: "GameScreenSelectors.MistakesCount"
    text: "0"
- assertVisible:
    id: "GameScreenSelectors.MaxMistakesAllowed"
    text: "3"
- assertVisible:
    id: "CellSelectors.Root"
- assertVisible:
    id: "AvailableValueItemSelectors.Button"
- assertVisible: "\\([0-9]{2}:[0-9]{2}\\)"

