appId: ${APP_ID}
---
- runFlow: subflows/navigation/launch-home.flow.yaml
- retry:
      maxRetries: 1
      commands:
          - tapOn:
                id: 'MainTabSelectors.Settings'
          - extendedWaitUntil:
                visible:
                    id: 'SettingsScreenSelectors.Root'
                timeout: 10000
- tapOn:
      id: 'MainTabSelectors.Stats'
- extendedWaitUntil:
      visible:
          id: 'HistoryScreenSelectors.Root'
      timeout: 10000
- tapOn:
      id: 'MainTabSelectors.Daily'
- extendedWaitUntil:
      visible:
          id: 'DailyScreenSelectors.Root'
      timeout: 10000
- tapOn:
      id: 'MainTabSelectors.Play'
- extendedWaitUntil:
      visible:
          id: 'HomeScreenSelectors.Root'
      timeout: 10000
